--- a/paper.tex
+++ b/paper.tex
@@ -84,7 +84,8 @@ Knowledge of the substructures in $D_{s}^{+} \rightarrow K^{+}K^{-}\pi^{+}$ deca
             \end{tabular}
         \end{center}
     \end{table*}
-    From Table~\ref{PreviousAnalyses}, we can see an obvious difference of decay fraction of $S(980)\pi^{+}$ between BABAR and CLEO-c.  
+    From Table~\ref{PreviousAnalyses}, we can see an obvious difference of decay fraction of $S(980)\pi^{+}$ between BABAR and CLEO-c. 
+    Here S(980) denotes $a_{0}(980)$ and $f_{0}(980)$.
     In this analysis with the double tag method, we can get a nearly background free data sample, which is good to perform the amplitude analysis.
 
     In addition, experimental measurements can help to refine theoretical models~\cite{PRD93-114010}.
